...
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/productselect_vertical_center"
                                                android:orientation="horizontal"
                                                app:layout_constraintGuide_percent="0.5"/>

    <Spinner android:layout_width="0dp" android:layout_height="wrap_content"
             android:id="@+id/productselect_spinner"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/productselect_vertical_center"
             app:layout_constraintVertical_chainStyle="packed"/>

    <Button android:layout_width="0dp" android:layout_height="wrap_content"
            android:id="@+id/productselect_button"
            style="@style/PrimaryButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/productselect_show_details"
            app:layout_constraintTop_toBottomOf="@+id/productselect_spinner" app:layout_constraintVertical_bias="0.0"/>
...
