...
              tools:text="26608"
              app:layout_constraintBaseline_toBaselineOf="@+id/productdetails_securityid_label"
              app:layout_constraintStart_toEndOf="@+id/productdetails_label_barrier"/>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              style="@style/PrimaryText"
              android:id="@+id/productdetails_displayname"
              tools:text="French Exchange"
              app:layout_constraintBaseline_toBaselineOf="@+id/productdetails_displayname_label"
              app:layout_constraintStart_toEndOf="@+id/productdetails_label_barrier"/>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              style="@style/PrimaryText"
...
